@@ -24,7 +24,7 @@ public class EditBlock {
     private static final Logger logger = LogManager.getLogger(EditBlock.class);
 
     // Pattern for the start of a search block, capturing the filename
-    private static final Pattern HEAD = Pattern.compile("^\\s*<{5,9} SEARCH\\s*(\\S+?)\\s*$", Pattern.MULTILINE);
+    private static final Pattern SEARCH = Pattern.compile("^\\s*<{5,9} SEARCH\\s*(\\S+?)\\s*$", Pattern.MULTILINE);
     // Pattern for the divider, capturing the filename
     private static final Pattern DIVIDER = Pattern.compile("^\\s*={5,9}\\s*(\\S+?)\\s*$", Pattern.MULTILINE);
     // Pattern for the end of a replace block, capturing the filename
@@ -75,7 +75,7 @@ public class EditBlock {
     }
 
     /**
-     * Parse the LLM response for SEARCH/REPLACE blocks (or shell blocks, etc.) and apply them.
+     * Parse the LLM response for SEARCH/REPLACE blocks and apply them.
      */
     public static EditResult applyEditBlocks(IContextManager contextManager, IConsoleIO io, Collection<SearchReplaceBlock> blocks) {
         // Track which blocks succeed or fail during application
@@ -86,11 +86,6 @@ public class EditBlock {
         Map<ProjectFile, String> changedFiles = new HashMap<>();
 
         for (SearchReplaceBlock block : blocks) {
-            // Shell commands remain unchanged
-            if (block.shellCommand() != null) {
-                io.systemOutput("Shell command from LLM:\n" + block.shellCommand());
-                continue;
-            }
 
             // 1. Resolve the filename
             ProjectFile file;
@@ -162,15 +157,11 @@ public class EditBlock {
     /**
      * Simple record storing the parts of a search-replace block.
      * If {@code filename} is non-null, then this block corresponds to a filename’s
-     * search/replace. If {@code shellCommand} is non-null, then this block
-     * corresponds to shell code that should be executed, not applied to a filename.
+     * search/replace
      */
-    public record SearchReplaceBlock(String filename, String beforeText, String afterText, String shellCommand) {
+    public record SearchReplaceBlock(String filename, String beforeText, String afterText) {
         @Override
         public String toString() {
-            if (shellCommand != null) {
-                return "```shell\n" + shellCommand + "\n```";
-            }
 
             StringBuilder sb = new StringBuilder();
             sb.append("```\n");
@@ -201,9 +192,6 @@ public class EditBlock {
     }
 
     public record ParseResult(List<SearchReplaceBlock> blocks, String parseError) { }
-
-    // Default fence to match triple-backtick usage, e.g. ``` ... ```
-    static final String[] DEFAULT_FENCE = {"```", "```"};
 
     private EditBlock() {
         // utility class
@@ -243,14 +231,14 @@ public class EditBlock {
     /**
      * Parses the given content into ParseResult
      */
-    public static ParseResult parseUpdateBlocks(String content) {
+    public static ParseResult parseEditBlocks(String content) {
         List<SearchReplaceBlock> blocks = new ArrayList<>();
         StringBuilder parseErrors = new StringBuilder();
         String[] lines = content.split("\n", -1);
         int i = 0;
 
         blockLoop: while (i < lines.length) {
-            Matcher headMatcher = HEAD.matcher(lines[i]);
+            Matcher headMatcher = SEARCH.matcher(lines[i]);
             if (headMatcher.matches()) {
                 String currentFilename = headMatcher.group(1).trim();
                 i++;
@@ -290,7 +278,7 @@ public class EditBlock {
                             if (!afterJoined.isEmpty() && !afterJoined.endsWith("\n")) {
                                 afterJoined += "\n";
                             }
-                            blocks.add(new SearchReplaceBlock(currentFilename, beforeJoined, afterJoined, null));
+                            blocks.add(new SearchReplaceBlock(currentFilename, beforeJoined, afterJoined));
                         } else {
                             // Non-fatal error for this block
                             parseErrors.append("Failed to parse block for '")
@@ -315,7 +303,7 @@ public class EditBlock {
                             .append(currentFilename).append(" =======' divider after '")
                             .append(currentFilename).append(" <<<<<<< SEARCH' but not found.\n");
                     // We continue so we can look for the next block
-                    continue blockLoop;
+                    continue;
                 }
 
                 // We found a standard divider => gather after-lines up to the REPLACE marker
@@ -336,7 +324,7 @@ public class EditBlock {
                             .append(currentFilename)
                             .append(" >>>>>>> REPLACE' marker after '")
                             .append(currentFilename).append(" <<<<<<< SEARCH'.\n");
-                    continue blockLoop;
+                    continue;
                 }
 
                 // Skip the REPLACE line
@@ -350,7 +338,7 @@ public class EditBlock {
                 if (!afterJoined.isEmpty() && !afterJoined.endsWith("\n")) {
                     afterJoined += "\n";
                 }
-                blocks.add(new SearchReplaceBlock(currentFilename, beforeJoined, afterJoined, null));
+                blocks.add(new SearchReplaceBlock(currentFilename, beforeJoined, afterJoined));
             }
             i++;
         }
@@ -562,7 +550,7 @@ public class EditBlock {
         }
 
         // Exactly one match
-        int matchStart = matches.get(0);
+        int matchStart = matches.getFirst();
 
         List<String> newLines = new ArrayList<>(Arrays.asList(originalLines).subList(0, matchStart));
         if (truncatedReplace.length > 0) {
@@ -656,80 +644,6 @@ public class EditBlock {
             return line.substring(delta);
         }
         return replacePrefix.substring(0, -delta) + line;
-    }
-
-    /**
-     * Uses LCS approximation for ratio.
-     */
-    private static double sequenceMatcherRatio(String a, String b) {
-        if (a.isEmpty() && b.isEmpty()) {
-            return 1.0;
-        }
-        int lcs = longestCommonSubsequence(a, b);
-        double denom = a.length() + b.length();
-        return (2.0 * lcs) / denom;
-    }
-
-    /**
-     * Optimized LCS with rolling 1D array instead of a 2D matrix
-     */
-    private static int longestCommonSubsequence(String s1, String s2) {
-        int n1 = s1.length();
-        int n2 = s2.length();
-        if (n1 == 0 || n2 == 0) {
-            return 0;
-        }
-        int[] prev = new int[n2 + 1];
-        int[] curr = new int[n2 + 1];
-
-        for (int i = 1; i <= n1; i++) {
-            // reset row
-            curr[0] = 0;
-            for (int j = 1; j <= n2; j++) {
-                if (s1.charAt(i - 1) == s2.charAt(j - 1)) {
-                    curr[j] = prev[j - 1] + 1;
-                } else {
-                    curr[j] = Math.max(prev[j], curr[j - 1]);
-                }
-            }
-            // swap references
-            int[] temp = prev;
-            prev = curr;
-            curr = temp;
-        }
-        return prev[n2];
-    }
-
-    /**
-     * Removes any extra lines containing the filename or triple-backticks fences.
-     */
-    public static String stripQuotedWrapping(String block, String fname, String[] fence) {
-        assert block != null;
-        if (block.isEmpty()) {
-            return block;
-        }
-        String[] lines = block.split("\n", -1);
-
-        // If triple-backtick block, remove the fences
-        // Note: We no longer strip the filename line here, as it's part of the SEARCH/REPLACE markers
-        if (lines.length >= 2
-                && lines[0].trim().equals(fence[0])
-                && lines[lines.length - 1].trim().equals(fence[1])) {
-            lines = Arrays.copyOfRange(lines, 1, lines.length - 1);
-        } else if (lines.length >= 1 && lines[0].trim().equals(fence[0])) {
-             // Handle missing closing fence
-             lines = Arrays.copyOfRange(lines, 1, lines.length);
-        } else if (lines.length >= 1 && lines[lines.length - 1].trim().equals(fence[1])) {
-             // Handle missing opening fence
-             lines = Arrays.copyOfRange(lines, 0, lines.length - 1);
-        }
-
-        String result = String.join("\n", lines);
-        // Ensure trailing newline, primarily for the case where fences were stripped
-        if (!result.isEmpty() && !result.endsWith("\n")) {
-             result += "\n";
-        }
-        return result;
     }
 
     /**
@@ -844,8 +758,7 @@ public class EditBlock {
         var project = cm.getProject();
         if (project != null) {
             var projectFileMatches = project.getFiles().stream()
-                    .filter(f -> f instanceof ProjectFile)
-                    .map(f -> (ProjectFile) f)
+                    .filter(Objects::nonNull)
                     .filter(f -> f.getFileName().equalsIgnoreCase(file.getFileName()))
                     .toList();
             if (projectFileMatches.size() == 1) {
